--- a/app/src/main/res/layout/activity_thankyou_donor_page.xml
+++ b/app/src/main/res/layout/activity_thankyou_donor_page.xml
@@ -47,4 +47,16 @@
         android:layout_marginBottom="165dp"
         android:text="Back to Profile"
         tools:text="Back to Profile" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="68dp"
+        android:layout_height="52dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="8dp"
+        app:srcCompat="@drawable/blooddrop" />
 </RelativeLayout>
