--- a/app/src/main/res/layout/activity_donor_profile_page.xml
+++ b/app/src/main/res/layout/activity_donor_profile_page.xml
@@ -29,7 +29,8 @@
         android:layout_marginLeft="22dp"
         android:layout_marginTop="240dp"
         android:text="Donation History"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView7"
