--- a/app/src/main/res/layout/activity_new_request_page.xml
+++ b/app/src/main/res/layout/activity_new_request_page.xml
@@ -11,9 +11,9 @@
         android:layout_width="wrap_content"
         android:layout_height="43dp"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="11dp"
-        android:layout_marginLeft="11dp"
-        android:layout_marginTop="378dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginTop="404dp"
         android:layout_toEndOf="@+id/textView11"
         android:layout_toRightOf="@+id/textView11"
         android:ems="10"
@@ -65,9 +65,9 @@
         android:layout_below="@+id/editage"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginStart="101dp"
-        android:layout_marginLeft="101dp"
-        android:layout_marginTop="38dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="52dp"
         android:layout_marginBottom="0dp"
         android:background="@android:drawable/btn_dropdown"
         android:spinnerMode="dropdown" />
@@ -96,9 +96,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="18dp"
-        android:layout_marginLeft="18dp"
-        android:layout_marginTop="349dp"
+        android:layout_marginStart="13dp"
+        android:layout_marginLeft="13dp"
+        android:layout_marginTop="375dp"
         android:text="Tell your story(why you need the blood)" />
 
     <TextView
@@ -115,14 +115,14 @@
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="wrap_content"
+        android:layout_width="287dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="19dp"
-        android:layout_marginTop="26dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginLeft="72dp"
+        android:layout_marginTop="8dp"
         android:text="New Emergency Request"
         android:textSize="30sp"
         android:textStyle="bold" />
@@ -170,9 +170,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="19dp"
-        android:layout_marginLeft="19dp"
-        android:layout_marginTop="278dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginLeft="18dp"
+        android:layout_marginTop="292dp"
         android:text="Location" />
 
     <TextView
@@ -182,9 +182,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="17dp"
-        android:layout_marginLeft="17dp"
-        android:layout_marginTop="314dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="340dp"
         android:text="Please Upload Photo" />
 
     <EditText
@@ -216,6 +216,18 @@
         android:layout_marginBottom="6dp"
         android:background="@android:color/holo_green_light"
         android:text="Submit Request" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="68dp"
+        android:layout_height="52dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="8dp"
+        app:srcCompat="@drawable/blooddrop" />
 
 
 </RelativeLayout>
